@@ -1,0 +1,150 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<MODE>
+	<PROPS>
+		<PROPERTY NAME="commentStart" VALUE="{" />
+		<PROPERTY NAME="commentEnd" VALUE="}" />
+		<PROPERTY NAME="lineComment" VALUE="--" />
+	</PROPS>
+	<RULES ESCAPE="\" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
+		<!-- whitespace: (space and tab) -->
+		<WHITESPACE> </WHITESPACE>
+		<WHITESPACE>	</WHITESPACE>
+
+		<!-- 4GL style comment -->
+		<SPAN TYPE="COMMENT1">
+			<BEGIN>{</BEGIN>
+			<END>}</END>
+		</SPAN>
+		<EOL_SPAN TYPE="COMMENT2">#</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">--</EOL_SPAN>
+
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
+			<BEGIN>"</BEGIN>
+			<END>"</END>
+		</SPAN>
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+
+		<!-- preprocessor statements -->
+
+		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+		<SEQ TYPE="NULL">)</SEQ>
+		<SEQ TYPE="OPERATOR">=</SEQ>
+		<SEQ TYPE="OPERATOR">!</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;=</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;=</SEQ>
+		<SEQ TYPE="OPERATOR">+</SEQ>
+		<SEQ TYPE="OPERATOR">-</SEQ>
+		<SEQ TYPE="OPERATOR">/</SEQ>
+
+		<SEQ TYPE="OPERATOR">*</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">%</SEQ>
+		<SEQ TYPE="OPERATOR">||</SEQ>
+		<SEQ TYPE="OPERATOR">^</SEQ>
+		<SEQ TYPE="OPERATOR">~</SEQ>
+		<SEQ TYPE="OPERATOR">}</SEQ>
+		<SEQ TYPE="OPERATOR">{</SEQ>
+		<SEQ TYPE="NULL">.</SEQ>
+		<SEQ TYPE="NULL">,</SEQ>
+		<SEQ TYPE="NULL">;</SEQ>
+		<SEQ TYPE="NULL">]</SEQ>
+		<SEQ TYPE="NULL">[</SEQ>
+		<SEQ TYPE="NULL">?</SEQ>
+		<SEQ TYPE="NULL">:</SEQ>
+
+		<!-- Function calls -->
+		<MARK_PREVIOUS TYPE="FUNCTION" EXCLUDE_MATCH="TRUE">(</MARK_PREVIOUS>
+
+		<KEYWORDS IGNORE_CASE="TRUE">
+			<KEYWORD3>char</KEYWORD3>
+			<KEYWORD3>double</KEYWORD3>
+			<KEYWORD3>float</KEYWORD3>
+			<KEYWORD3>int</KEYWORD3>
+			<KEYWORD3>integer</KEYWORD3>
+			<KEYWORD3>smallint</KEYWORD3>
+			<KEYWORD3>long</KEYWORD3>
+			<KEYWORD3>short</KEYWORD3>
+			<KEYWORD3>decimal</KEYWORD3>
+			<KEYWORD3>money</KEYWORD3>
+			<KEYWORD3>record</KEYWORD3>
+			<KEYWORD3>like</KEYWORD3>
+
+			<KEYWORD1>begin</KEYWORD1>
+			<KEYWORD1>rollback</KEYWORD1>
+			<KEYWORD1>commit</KEYWORD1>
+			<KEYWORD1>work</KEYWORD1>
+			<KEYWORD1>call</KEYWORD1>
+			<KEYWORD1>sleep</KEYWORD1>
+			<KEYWORD1>whenever</KEYWORD1>
+			  <KEYWORD1>error</KEYWORD1>
+			    <KEYWORD1>continue</KEYWORD1>
+			    <KEYWORD1>stop</KEYWORD1>
+			<KEYWORD1>clear</KEYWORD1>
+			  <KEYWORD1>screen</KEYWORD1>
+			<KEYWORD1>function</KEYWORD1>
+			<KEYWORD1>let</KEYWORD1>
+			<KEYWORD1>construct</KEYWORD1>
+			<KEYWORD1>declare</KEYWORD1>
+			<KEYWORD1>execute</KEYWORD1>
+			<KEYWORD1>free</KEYWORD1>
+			<KEYWORD1>prepare</KEYWORD1>
+			<KEYWORD1>database</KEYWORD1>
+			<KEYWORD1>define</KEYWORD1>
+			<KEYWORD1>foreach</KEYWORD1>
+			<KEYWORD1>message</KEYWORD1>
+			<KEYWORD1>exit</KEYWORD1>
+			<KEYWORD1>report</KEYWORD1>
+			<KEYWORD1>start</KEYWORD1>
+			<KEYWORD1>prompt</KEYWORD1>
+			<KEYWORD1>main</KEYWORD1>
+			<KEYWORD1>globals</KEYWORD1>
+			<KEYWORD1>finish</KEYWORD1>
+			<KEYWORD1>case</KEYWORD1>
+			<KEYWORD1>open</KEYWORD1>
+			<KEYWORD1>close</KEYWORD1>
+			<KEYWORD1>window</KEYWORD1>
+			<KEYWORD1>do</KEYWORD1>
+			<KEYWORD1>else</KEYWORD1>
+			<KEYWORD1>for</KEYWORD1>
+			<KEYWORD1>goto</KEYWORD1>
+			<KEYWORD1>end</KEYWORD1>
+			<KEYWORD1>if</KEYWORD1>
+			<KEYWORD1>then</KEYWORD1>
+			<KEYWORD1>display</KEYWORD1>
+			<KEYWORD1>return</KEYWORD1>
+			<KEYWORD1>while</KEYWORD1>
+			<KEYWORD1>prepare</KEYWORD1>
+			<KEYWORD1>cursor</KEYWORD1>
+			<KEYWORD1>select</KEYWORD1>
+			<KEYWORD1>insert</KEYWORD1>
+			<KEYWORD1>where</KEYWORD1>
+			<KEYWORD1>into</KEYWORD1>
+			<KEYWORD1>order</KEYWORD1>
+			<KEYWORD1>program</KEYWORD1>
+			<KEYWORD1>print</KEYWORD1>
+			<KEYWORD1>column</KEYWORD1>
+			<KEYWORD1>from</KEYWORD1>
+
+			<KEYWORD2>with</KEYWORD2>
+			<KEYWORD2>form</KEYWORD2>
+			<KEYWORD2>at</KEYWORD2>
+			<KEYWORD2>not</KEYWORD2>
+			<KEYWORD2>matches</KEYWORD2>
+			<KEYWORD2>today</KEYWORD2>
+			<KEYWORD2>current</KEYWORD2>
+			<KEYWORD2>noentry</KEYWORD2>
+			<KEYWORD2>clipped</KEYWORD2>
+			<LITERAL2>true</LITERAL2>
+			<LITERAL2>false</LITERAL2>
+			<LITERAL2>null</LITERAL2>
+			<LITERAL2>sqlca.sqlcode</LITERAL2>
+		</KEYWORDS>
+	</RULES>
+</MODE>
